asm_tests/other_testfiles/invalid_files/error31.s
.name "MORO"
.comment "MORJESTA!
moro
moro
moro
moro"

sti r1, , r2, r3
